--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,7 +9,9 @@
 
     <%= stylesheet_link_tag "application", :media => "all" %>
 
-
+    <%= javascript_include_tag "https://www.gstatic.com/charts/loader.js" %>
+    <%= javascript_include_tag "https://www.google.com/jsapi", "chartkick" %>
+    <%= javascript_include_tag "https://www.gstatic.com/loader.js" %>
     <%= javascript_include_tag "application" %>
 
 
