possessive gem added

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -4,7 +4,7 @@
   <div class="col-md-4 col-sm-12">
     <div class="panel panel-default">
       <div class="panel-heading">
-        <h1> <%= @user.username %>'s Profile </h1>
+        <h1> <%= @user.username.possessive %> Profile </h1>
       </div>
       <div class="panel-body">
         <% if @user.avatar? %>
