fixed steeler style sheet

--- a/app/assets/stylesheets/custom.scss
+++ b/app/assets/stylesheets/custom.scss
@@ -2,6 +2,10 @@
   margin: 0 0 20px 0;
 }
 
+.shadow-card {
+  box-shadow: 0px 20px 30px 3px rgba(0, 0, 0, 0.55);
+}
+
 .pick-status {
   margin-top: 3px;
   font-size: 12px;
@@ -429,12 +433,12 @@
   background: #D3BC8D;
 }
 
-.pittsburgsteelers {
+.pittsburghsteelers {
   color: #FFB81C;
   border-color: #FFB81C;
 }
 
-.pittsburgsteelers:hover  {
+.pittsburghsteelers:hover  {
   background: #FFB81C;
 }
 
