--- a/app/views/static_pages/rules.html.erb
+++ b/app/views/static_pages/rules.html.erb
@@ -4,13 +4,14 @@
 <div class="row">
 <div class="col-xs-12 col-md-8">
 <ul class="list-group">
-  <li class="list-group-item">1. Pick all 11 NFL Playoff Games against the spread</li>
+  <li class="list-group-item">1. Pick all 13 NFL Playoff Games against the spread</li>
   <li class="list-group-item">2. Each pick is either a regular pick or a "Lock" (high confidence)</li>
   <li class="list-group-item">3. Each player has 5 "Locks" to spend over the playoffs as they choose</li>
   <li class="list-group-item">4. Regular picks are worth one point, locks are worth two</li>
-  <li class="list-group-item">5. Tie breaker is Superbowl Over/Under</li>
-  <li class="list-group-item">6. Super tiebreaker is Superbowl Total Score closest to guess</li>
-  <li class="list-group-item">7. Winner takes all</li>
+  <li class="list-group-item">5. First tie breaker is Superbowl Over/Under</li>
+  <li class="list-group-item">6. Second tiebreaker is person with most lock picks correct</li>
+  <li class="list-group-item">7. Super tiebreaker is person who guesses the total superbowl score the closest</li>
+  <li class="list-group-item">8. Winner takes all</li>
 </ul>
 </div>
 </div>
